templates/kusk-gateway_template.yaml
---
# Source: kusk-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kusk-gateway-xds-service
  namespace: default
  labels:
    helm.sh/chart: kusk-gateway-0.0.65
    app.kubernetes.io/name: kusk-gateway
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: xds-service
spec:
  type: ClusterIP
  ports:
    - port: 18000
      targetPort: xds
      protocol: TCP
      name: xds
  selector:
    app.kubernetes.io/name: kusk-gateway
    app.kubernetes.io/instance: release-name
---
# Source: kusk-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "kusk-gateway-validator-service"
  namespace: default
  labels:
    helm.sh/chart: kusk-gateway-0.0.65
    app.kubernetes.io/name: kusk-gateway
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: validator-service
spec:
  type: ClusterIP
  ports:
    - port: 17000
      targetPort: validator
      protocol: TCP
      name: validator
  selector:
    app.kubernetes.io/name: kusk-gateway
    app.kubernetes.io/instance: release-name
---
# Source: kusk-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "kusk-gateway-auth-service"
  namespace: default
  labels:
    helm.sh/chart: kusk-gateway-0.0.65
    app.kubernetes.io/name: kusk-gateway
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: auth-service
spec:
  type: ClusterIP
  ports:
    - port: 19000
      targetPort: auth
      protocol: TCP
      name: auth
  selector:
    app.kubernetes.io/name: kusk-gateway
    app.kubernetes.io/instance: release-name
---
# Source: kusk-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kusk-gateway-webhooks-service
  namespace: default
  labels:
    helm.sh/chart: kusk-gateway-0.0.65
    app.kubernetes.io/name: kusk-gateway
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: kusk-gateway-webhooks-service
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: webhook-server
      protocol: TCP
      name: webhook-server
  selector:
    app.kubernetes.io/name: kusk-gateway
    app.kubernetes.io/instance: release-name
---
# Source: kusk-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kusk-gateway-agent-service
  namespace: default
  labels:
    helm.sh/chart: kusk-gateway-0.0.65
    app.kubernetes.io/name: kusk-gateway
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: agent-service
spec:
  ports:
    - port: 18010
      name: agent-config
      targetPort: agent-config
  selector:
    app.kubernetes.io/name: kusk-gateway
    app.kubernetes.io/instance: release-name
---
# Source: kusk-gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kusk-gateway-manager
  namespace: default
  annotations:
    checksum/config: 502610f750d0e868735234cd555ce29e50ee72094a76a0b098f744df05cd55b3
  labels:
    helm.sh/chart: kusk-gateway-0.0.65
    app.kubernetes.io/name: kusk-gateway
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: kusk-gateway-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kusk-gateway
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: kusk-gateway
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: kusk-gateway-manager
      securityContext:
        fsGroup: 65532
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
      containers:
        - name: kube-rbac-proxy
          args:
          - --secure-listen-address=0.0.0.0:8443
          - --upstream=http://127.0.0.1:8080/
          - --logtostderr=true
          - --v=10
          image: gcr.io/kubebuilder/kube-rbac-proxy:v0.8.0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8443
            name: https
            protocol: TCP
          resources:
            {}
        - name: manager
          securityContext:
            allowPrivilegeEscalation: false
          image: "kubeshop/kusk-gateway:v1.5.4"
          imagePullPolicy: IfNotPresent
          command:
            - /manager
          ports:
            - containerPort: 19000
              name: auth
              protocol: TCP
            - name: xds
              containerPort: 18000
              protocol: TCP
            - containerPort: 17000
              name: validator
              protocol: TCP
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
            - containerPort: 18010
              name: agent-config
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
          resources:
            {}
      terminationGracePeriodSeconds: 10
---
# Source: kusk-gateway/templates/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kusk-gateway-mutating-webhook-configuration
  namespace: default
  labels:
    helm.sh/chart: kusk-gateway-0.0.65
    app.kubernetes.io/name: kusk-gateway
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.4"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: kusk-gateway-webhooks-service
      namespace: default
      path: /mutate-gateway-kusk-io-v1alpha1-api
  failurePolicy: Fail
  name: mapi.kb.io
  rules:
  - apiGroups:
    - gateway.kusk.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - apis
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kusk-gateway-webhooks-service
      namespace: default
      path: /mutate-gateway-kusk-io-v1alpha1-staticroute
  failurePolicy: Fail
  name: mstaticroute.kb.io
  rules:
  - apiGroups:
    - gateway.kusk.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - staticroutes
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kusk-gateway-webhooks-service
      namespace: default
      path: /mutate-gateway-kusk-io-v1alpha1-envoyfleet
  failurePolicy: Fail
  name: menvoyfleet.kb.io
  rules:
  - apiGroups:
    - gateway.kusk.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - envoyfleet
  sideEffects: None
---
# Source: kusk-gateway/templates/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: kusk-gateway-validating-webhook-configuration
  namespace: default
  labels:
    helm.sh/chart: kusk-gateway-0.0.65
    app.kubernetes.io/name: kusk-gateway
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.4"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: kusk-gateway-webhooks-service
      namespace: default
      path: /validate-gateway-kusk-io-v1alpha1-api
  failurePolicy: Fail
  name: vapi.kb.io
  rules:
  - apiGroups:
    - gateway.kusk.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - apis
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kusk-gateway-webhooks-service
      namespace: default
      path: /validate-gateway-kusk-io-v1alpha1-envoyfleet
  failurePolicy: Fail
  name: venvoyfleet.kb.io
  rules:
  - apiGroups:
    - gateway.kusk.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - envoyfleet
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kusk-gateway-webhooks-service
      namespace: default
      path: /validate-gateway-kusk-io-v1alpha1-staticroute
  failurePolicy: Fail
  name: vstaticroute.kb.io
  rules:
  - apiGroups:
    - gateway.kusk.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - staticroutes
  sideEffects: None
